netpol-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: netpol-analyzer
  namespace: demo
  labels:
    app: netpol-analyzer
spec:
  type: ExternalName
  externalName: host.docker.internal
  ports:
    - port: 9090
      targetPort: 9090
